--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span id="author"></span>
         </div>
         <div class="button-container">
-            <button class="twitter-button" id="twitter" title="Tweet this!">
+            <button class="twitter-button" id="twit" title="Tweet this!">
                 <i class="fab fa-twitter"></i>
             </button>
             <button id="new-quote">New quote</button>
